# Changelog

## 1.x.x (2025-xx-xx)

* ...


## 1.1.6 (2024-08-22)

* [PYTHON] The package now works with *numpy* 2.0.


## 1.1.5 (2023-10-18)

* [BACKWARD INCOMPATIBILITY] [Python and R] Inequality measures
    are no longer referred to as inequity measures.

* [BACKWARD INCOMPATIBILITY] [Python and R]
    Some external cluster validity measures were renamed:
    `adjusted_asymmetric_accuracy` -> `normalized_clustering_accuracy`,
    `normalized_accuracy` -> `normalized_pivoted_accuracy`.

* [BACKWARD INCOMPATIBILITY] [Python] `compare_partitions2` has been removed,
    as `compare_partitions` and other partition similarity scores
    now support both pairs of label vectors `(x, y)` and confusion matrices
    `(x=C, y=None)`.

* [Python and R] New parameter to `pair_sets_index`: `clipped`.

* In `normalizing_permutation` and external cluster validity measures,
    the input matrices can now be of the type `double`.

* [BUGFIX] [Python] #80: Fixed adjustment for `nmslib_n_neighbors`
    in small samples.

* [BUGFIX] [Python] #82: `cluster_validity` submodule not imported.

* [BUGFIX] Some external cluster validity measures
    now handle NaNs better and are slightly less prone to round-off errors.


## 1.1.4 (2023-03-31)

*  [Python] The GIc algorithm is no longer marked as experimental;
   its description is provided in
   <https://doi.org/10.1007/s00357-024-09483-1>.


## 1.1.3 (2023-01-17)

*  [R] `mst.default` now throws an error if any element in the input matrix
   is missing/infinite.

*  [Python] The call to `mlpack.emst` that stopped working
   with the new version of `mlpack` has been fixed.


## 1.1.2 (2022-09-17)

*  [Python and R] `adjusted_asymmetric_accuracy`
   now accepts confusion matrices with fewer columns than rows.
   Such "missing" columns are now treated as if they were filled with 0s.

*  [Python and R] `pair_sets_index`, and `normalized_accuracy` return
   the same results for non-symmetric confusion matrices and transposes thereof.

